# easyLite

./: CMakeLists.txt  README.md
include/: ArduinoJson-v5.13.3.h  common.h  def.h  easylite.h  easylite_api.h  easylite_engine.h  jx9.h  symbol.h  unqlite.c  unqlite.h
include/exception/: easylite_exceptio.h
include/jni/: com_dfacedb_DfaceDB.h
src/: easylite_engine.cpp  testdb.cpp
src/exception/: dface_db_exception.cpp
src/java/com/jkk/: EasyLite.java
src/java/com/jkk/exception/: EasyLiteException.java  ErrorCode.java
src/jni/: easylite_jni.cpp
